# fincore

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  coverage.json  git_dual_push_setup.sh  install_unix.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  test_python_versions_simple.bat  test_python_versions_simple.sh
.github/: PAGES_SETUP.md  dependabot.yml
.github/workflows/: ci-enhanced.yml  ci.yml  docs.yml  publish.yml  test-priority.yml
.pytest_tmp/popen-gw0/: test_savecurrent  test_to_html_savecurrent
.pytest_tmp/popen-gw1/: test_savecurrent  test_to_html_savecurrent
.pytest_tmp/popen-gw2/: test_savecurrent  test_to_html_savecurrent
.windsurf/workflows/: bmad-gds-create-game-brief.md  bmad-gds-create-gdd.md  bmad-gds-generate-project-context.md  bmad-gds-quick-dev.md  bmad-gds-quick-spec.md
_bmad-output/: COMPLETE-report.md  FINAL-COMPLETION-REPORT.md  FINAL-SUMMARY.md  FINAL-VERIFICATION-REPORT.md  adversarial-review-report.md  code-review-report.md  edge-case-hunter-report.json  implementation-roadmap-report.md  metrics-coverage-execution-plan.md  metrics-coverage-improvement-plan.md  phase-2-completion-report.md  project-context.md  test-quality-monitoring-system.md
_bmad-output/test-artifacts/: automation-summary.md  ci-configuration.md  coverage-report.md  nfr-assessment.md  test-review.md  traceability-report.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
benchmarks/: bench_metrics.py  results.json
docs/: API_STABILITY.md  BENCHMARKS.md  CI_CD_ANALYSIS.md  CLEANUP_SUMMARY.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_REVIEW.md  CODE_REVIEW_REPORT.md  DOC_CONFIG_ANALYSIS.md  IMPROVEMENTS.md  MIGRATION.md  api.md  change_log.md  development.md  examples.md  index.md  logic_issues.md  requirements-docs.txt  testing-guide.md  user_guide.md  已实现函数索引.md
docs/0003_把empyrical重构成一个类的形式/: 01_需求文档.md
docs/0004_修复重构后的bugs/: 01_需求.md
docs/0006_增加注释/: 01_为函数在增加详细的注释.md
docs/0010-继续分析bug和优化/: 01-分析bug和优化改进.md
docs/0011_继续分析bug和改进优化/: 01-分析bug和优化改进.md
docs/0014-继续分析bug和改进优化/: 01-分析bug和优化改进.md
docs/0016-继续分析bug和改进优化/: 01-分析bug和优化改进.md
docs/0017-继续分析bug和改进优化/: 01-分析bug和优化改进.md
docs/0019-重构迭代/: 重构迭代计划.md
docs/0020-重构优化/: 重构优化.md
docs/0021-重构优化/: examples.md
docs/0022-重构优化/: 图标功能优化.md
docs/0023-准备上线工作/: 生成fincore包.md
docs/0024-优化格式/: 优化格式.md
docs/0025-校正指标计算方式/: 继续计算其他指标.md  计算downside_risk等指标.md  需求.md
docs/0026-优化生成的报告/: 需求.md
docs/0027-迈向世界一流绩效分析框架/: 01_需求文档.md  02_技术方案.md  03_迭代进展.md
docs/0028-代码质量优化迭代/: 02_迭代完成报告.md  README.md
docs/0029-完善hooks模块/: 02_迭代完成报告.md  README.md
docs/0030-类型系统改进/: README.md
docs/0031-代码优化与清理/: README.md
docs/0032-迭代完善计划/: README.md
docs/0033-持续优化与产品化/: COMPLETED.md
docs/0035-语义正确性与测试有效性深化/: README.md
docs/0036-全面质量提升与Bug修复/: README.md
docs/0037-不断修复bug并完善项目/: readme.md
docs/0039-优化完善项目/: 任务.md
docs/api文档/: 01_顶层API.md  02_Empyrical指标.md  03_Pyfolio可视化.md  04_风险模型.md  05_组合优化.md  06_蒙特卡洛模拟.md  07_绩效归因.md  08_报告生成.md  README.md
docs/教程/: 01_入门_策略绩效分析.md  02_进阶_风险管理与压力测试.md  03_进阶_组合优化.md  04_高级_绩效归因与因子分析.md  README.md
docs/用户手册/: 01_安装指南.md  02_快速入门.md  03_核心概念.md  04_数据准备.md  05_常见工作流.md  06_FAQ.md  README.md
docs/迭代38-持续不间断运行/: 任务.md
examples/: 01_single_strategy_analysis.py  02_multi_strategy_comparison.py  03_factor_attribution.py  04_risk_management_report.py  05_rolling_engine.py  06_advanced_backtesting_metrics.py  07_market_timing_analysis.py  08_portfolio_optimization_deep_dive.py  09_monte_carlo_simulation.py  10_market_timing_analysis.py  11_performance_attribution.py  12_data_provider_usage.py  13_bootstrap_analysis.py  14_stress_testing.py  15_report_generation.py  16_custom_optimization.py  17_visualization_backends.py  18_positions_analysis.py  19_rolling_metrics.py  20_complete_workflow.py  README.md  analyze_with_fincore.py  generate_report.py  monte_carlo_simulation.py  performance_attribution.py  portfolio_optimization.py  quick_start.py  risk_models.py
examples/011_abberation/: README.md  analyze_strategy.py  config.yaml  plot_tearsheet.py  run.py  strategy_abberation.py
fincore/: __init__.py  _registry.py  _types.py  empyrical.py  exceptions.py  pyfolio.py  report.py  validation.py
fincore/attribution/: __init__.py  brinson.py  fama_french.py  fama_french_patch.py  style.py
fincore/constants/: __init__.py  color.py  interesting_periods.py  periods.py  style.py
fincore/core/: __init__.py  context.py  engine.py
fincore/data/: __init__.py  providers.py
fincore/empyrical/: __init__.py  perf_attrib.py  stats.py
fincore/empyricals/: __init__.py  alpha_beta.py  bayesian.py  consecutive.py  drawdown.py  perf_attrib.py  perf_stats.py  positions.py  ratios.py  returns.py  risk.py  rolling.py  round_trips.py  stats.py  timing.py  yearly.py  (+1 more)
mkdocs_docs/: index.md
scripts/: README_update_script.md  claude_night_runner.sh  fincore_night_runner.sh  git_dual_push_setup.sh  install_unix.sh  install_win.bat  kill_claude_runner.sh  optimize_code.sh  remove_null_bytes_empyrical.py  simple_import_test.py  simple_test.py  test_python_versions_simple.bat  test_python_versions_simple.sh  test_runner.py  update_global_index_data.py  verify_environment.py  verify_quality_fixes.py
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py  conftest_backup.py  conftest_improved.py  test_advanced_ratios.py  test_annual_alpha_beta.py  test_continuous_stats.py  test_correlation_analysis.py  test_coverage_gaps.py  test_edge_cases.py  test_exact_line_coverage.py  test_final_coverage_edges.py  test_import_time.py  test_perf_attrib.py  test_ranking_and_cornell.py  test_return_metrics.py  test_smoke_import.py  test_special_indicators.py  test_statistical_properties.py  test_stats.py  test_timing_models.py
(+545 files in other folders)
