[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fincore"
version = "0.1.0"
description = "Quantitative performance and risk analytics for Python"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "cloudQuant", email = "yunjinqi@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.17.0",
    "pandas>=0.25.0",
    "scipy>=1.3.0",
    "pytz>=2023.3",
    "packaging>=21.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.3", "seaborn>=0.11", "ipython>=7.0"]
bayesian = ["pymc>=5.0"]
datareader = ["pandas-datareader>=0.8.0"]
dev = [
    "pytest>=6.0",
    "pytest-xdist>=2.0",
    "pytest-cov>=2.10",
    "pytest-benchmark>=3.2",
    "pytest-sugar>=0.9",
    "parameterized",
    "ruff>=0.4.0",
    "mypy>=1.5",
]
all = ["fincore[viz,bayesian,datareader]"]

[project.urls]
Homepage = "https://github.com/cloudQuant/fincore"

[tool.setuptools.packages.find]
include = ["fincore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E402",   # module-level import not at top of file (intentional in this codebase)
    "E501",   # line too long (handled by ruff format)
    "E731",   # lambda assignment
    "F401",   # unused import (many are dynamically accessed via __getattr__ / registry)
    "F811",   # redefinition of unused name (intentional re-exports)
    "F841",   # local variable assigned but never used
    "UP007",  # use X | Y for union types
    "UP031",  # use format specifiers instead of percent format
    "UP035",  # import from typing (kept for clarity)
    "B007",   # unused loop variable
    "B008",   # function call in argument defaults
    "B023",   # function definition does not bind loop variable
    "B028",   # no explicit stacklevel keyword argument
    "B904",   # raise without from inside except
    "B905",   # zip() without explicit strict= parameter
    "SIM102", # collapsible if
    "SIM105", # use contextlib.suppress
    "SIM108", # use ternary operator
    "SIM113", # use enumerate for index variable
    "SIM118", # use key in dict instead of key in dict.keys()
    "SIM201", # use != instead of not ==
]
