[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fincore"
version = "1.0.0"
description = "Quantitative performance and risk analytics for Python"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "cloudQuant", email = "yunjinqi@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.17.0",
    "pandas>=0.25.0",
    "scipy>=1.3.0",
    "pytz>=2023.3",
    "packaging>=21.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.3", "seaborn>=0.11", "ipython>=7.0"]
bayesian = ["pymc>=5.0"]
datareader = ["pandas-datareader>=0.8.0"]
dev = [
    "pytest>=6.0",
    "pytest-xdist>=2.0",
    "pytest-cov>=2.10",
    "pytest-benchmark>=3.2",
    "pytest-sugar>=0.9",
    "parameterized",
    "ruff>=0.4.0",
    "mypy>=1.5",
]
all = ["fincore[viz,bayesian,datareader]"]

[project.urls]
Homepage = "https://github.com/cloudQuant/fincore"

[tool.setuptools.package-data]
fincore = ["py.typed"]

[tool.setuptools.packages.find]
include = ["fincore*"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q -ra -n auto --dist=loadscope"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "p0: marks tests as critical priority (core metrics, revenue-critical, security, compliance)",
    "p1: marks tests as high priority (frequently used features, important edge cases)",
    "p2: marks tests as medium priority (secondary features, admin functions)",
    "p3: marks tests as low priority (rarely used, cosmetic)",
]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__"]
filterwarnings = [
    "error::RuntimeWarning",
    # Third-party noise (not actionable for this project).
    "ignore::UserWarning:matplotlib\\.dates",
    "ignore::PendingDeprecationWarning:seaborn\\.categorical",
    "ignore::DeprecationWarning:PyPDF2",
    "ignore:This axis already has a converter:UserWarning",
    "ignore:Legend does not support handles:UserWarning",
    "ignore:PeriodDtype\\[B\\] is deprecated:FutureWarning",
    # Expected in tests: synthetic returns may not overlap with predefined stress periods.
    "ignore:Passed returns do not overlap with any interesting times\\.:UserWarning:fincore\\.tearsheets\\.sheets",
    "ignore:Passed returns do not overlap with any interesting times\\.:UserWarning:fincore\\.pyfolio",
]

[tool.coverage.run]
source = ["fincore"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/deprecate.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    # Defensive unreachable code
    "if \\(len\\(returns\\) == 0\\) or \\(len\\(underwater\\) == 0\\):",
    "if len\\(years\\) < 1:",
    "if len\\(max_dds\\) == 0:",
    # hurst_exponent edge cases
    "if n_subseries < 1:",
    "return np.nan # hurst fallback line 193",
    "if len\\(lags_array\\) < 2:",
    # Abstract methods
    "pass$",
    # Standard pragma
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fincore.core.*",
    "fincore.metrics.*",
    "fincore.plugin.*",
    "fincore.data.*",
]
disallow_untyped_defs = false
warn_return_any = false

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
	ignore = [
	    "E402",   # module-level import not at top of file (intentional in this codebase)
	    "E501",   # line too long (handled by ruff format)
	    "F401",   # unused import (many are dynamically accessed via __getattr__ / registry)
	    "UP007",  # use X | Y for union types
	    "UP031",  # use format specifiers instead of percent format
	    "UP035",  # import from typing (kept for clarity)
	    "B007",   # unused loop variable
	    "B023",   # function definition does not bind loop variable
	    "B028",   # no explicit stacklevel keyword argument
	    "B904",   # raise without from inside except
	    "SIM102", # collapsible if
	    "SIM105", # use contextlib.suppress
	    "SIM108", # use ternary operator
	    "SIM113", # use enumerate for index variable
    "SIM118", # use key in dict instead of key in dict.keys()
    "SIM201", # use != instead of not ==
]
